出題用手牌の作成